--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  
 
-      - name: Use Secret Variable
+      - name: Print API Token (For Testing Only)
         env:
           API_TOKEN: ${{ secrets.API_TOKEN }}
-
+        run: echo "Token saat ini adalah $API_TOKEN"  
